2012-03-19  Sergei Gavrikov  <sergei.gavrikov@gmail.com>
            Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/except1.cxx (cause_exception): Fix compiler warning about
	variable that is set but not used. Enter CYGBLD_ATTRIB_UNUSED.
	* tests/kexcept1.c (cause_exception): Ditto.
	* tests/kmbox1.c (entry1): Fix compiler warning about variable that
	is set but not used. Use by a conditional CYGMTH_MBOX_PUT_CAN_WAIT.
	* tests/mbox1.cxx (entry1): Ditto.
	* tests/tm_basic.cxx (run_thread_tests, run_mbox_tests,
	run_flag_tests): Remove unused variables.

2012-03-06  Grant Edwards <grant.b.edwards@gmail.com>
	
	* src/intr/intr.cxx (attach): Fix compiler warning about unused
	variable. [ Bugzilla 1001505 ]

2011-07-09  Ilija Kocho  <ilijak@siva.com.mk>

	* tests/bin_sem2.cxx (PHILOSOPHERS):
	* tests/fptest.cx (TEST_NA):
	* tests/kmutex3.c (NTHREADS):
	* tests/kmutex4.c (NTHREADS):
	* tests/mutex3.cxx (NTHREADS):
	* tests/thread_gdb.c (NTHREADS):
	* tests/timeslice.c (NTHREADS_MAX):
	* tests/timeslice2.c (NTHREADS_MAX):
	* tests/tm_basic.cxx (NTEST_THREADS): Given a chance to compile and
	run more tests for low memory footprint targets. [ Bugzilla 1001253 ]

2010-11-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/intr0.cxx (intr0_main): Fix a compiler warning by changing
	a CHECK() statement.

2010-03-29  Lars Povlsen  <lpovlsen@vitesse.com>

	* src/common/thread.cxx: Add volatile to idle_thread_loops for use with
	cpuload package and GCC 4.

2010-02-25  John Dallaway  <john@dallaway.org.uk>

	* doc/kernel.sgml: Indicate that cyg_alarm_initialize() takes an
	absolute trigger value. Issue reported by Grant Edwards.
	* cdl/kernel.cdl: Reference the kernel instrumentation documentation.

2010-01-27  John Dallaway  <john@dallaway.org.uk>

	* include/instrmnt.h: Add instrumentation macros for event flags and
	the bitmap scheduler.
	* include/instrument_desc.h: Regenerate.
	* src/sync/flag.cxx, src/sched/bitmap.cxx: Add instrumentation.